tests/NormalTests/paczka2/big_fuzzy/70847323.err
Error in line 7: gK4x S818 19,1
Error in line 17: gK4x A108 23,1
Error in line 11: A45 S834 52,5
Error in line 24: A45 A45 78,8
Error in line 30: PxeIvoAF2k S834 45,6
Error in line 42: gK4x S834 -5,1
Error in line 41: A45 S834 30,3
Error in line 52: Xrht3A1tt A45 88,5
Error in line 27: gK4x S834 82,3
Error in line 49: A45 A108 76,8
Error in line 70: A45 S834 -1,6
Error in line 67: A45 S834 13,1
Error in line 68: kq7lgTXN A108 70,8
Error in line 79: Xrht3A1tt A45 46,2
Error in line 81: PxeIvoAF2k S834 40,36
Error in line 78: kq7lgTXN S818 36,9
Error in line 84: kq7lgTXN A45 14,2
Error in line 91: kqSlgTXN S834 S4,4
Error in line 43: wss S834 21,6
Error in line 93: PxeIvoAF2k S834 148,2
Error in line 98: A45 A108 43,2
Error in line 109: gK4x A108 46,6
Error in line 121: gK4x A108 99,9
Error in line 126: wss A108 55,0
Error in line 136: Xrht3A1tt S834 26,7
Error in line 137: Xrht3A1tt A45 89,0
Error in line 139: wss S834 191,7
Error in line 140: Xrht3A1tt S834 9,0
Error in line 149: PxeIvoAF2k A45 61,0
Error in line 99: kq7lgTXN S834 50,6
Error in line 164: Xrht3A1tt S834 40,8
Error in line 165: wss S818 58,2
Error in line 179: gK4x A45 20,1
Error in line 182: kq7lgTXN S834 47,9
Error in line 189: a8g0 A108 40,9
Error in line 203: wss S834 25,7
Error in line 225: wss S818 -5,5
Error in line 226: gK4x A108 78,2
Error in line 230: PxeIvoAF2k S818 86,5
Error in line 184: Xrht3A1tt S818 89,7
Error in line 231: gK4x A45 84,4
Error in line 234: Xrht3A1tt S834 0,3
Error in line 239: wss A45 22,9
Error in line 245: wss S834 16,2
Error in line 246: wss S818 569,4
